# ds-platform-utils

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: CODEOWNERS  ci-cd-ds-platform-utils.yaml
docs/: README.md
docs/api/: index.md
docs/examples/: README.md
docs/guides/: best_practices.md  common_patterns.md  getting_started.md  performance_tuning.md  troubleshooting.md
docs/metaflow/: README.md  batch_inference_pipeline.md  make_pydantic_parser_fn.md  pandas.md  publish.md  publish_pandas.md  query_pandas_from_snowflake.md  restore_step_state.md  validate_config.md
docs/snowflake/: README.md
metaflow/: get_snowflake_connection.py
src/ds_platform_utils/: __init__.py  pandas_utils.py  sql_utils.py
src/ds_platform_utils/_snowflake/: pandas.py  run_query.py  shared.py  write_audit_publish.py
src/ds_platform_utils/metaflow/: __init__.py  _consts.py  _write_audit_publish.py  batch_inference.py  batch_inference_pipeline.py  dotdict.py  get_snowflake_connection.py  pandas.py  pandas_via_s3_stage.py  restore_flow_state1.py  restore_step_state.py  s3.py  s3_stage.py  shutdownable_queue.py  snowflake_connection.py  validate_config.py  write_audit_publish.py
src/ds_platform_utils/metaflow_s3/: utils.py
src/ds_platform_utils/shared/: utils.py
src/ds_platform_utils/snowflake/: __init__.py  pandas.py  write_audit_publish.py
src/sql/: 4c4a4dd6.sql
test-reports/: .coverage  coverage.xml  report.xml
tests/functional_tests/metaflow/: test__add_comment_to_each_sql_statement.py  test__batch_inference.py  test__batch_inference_pipeline.py  test__execute_sql_integration.py  test__get_select_dev_query_tags.py  test__pandas.py  test__pandas_s3.py  test__pandas_utc.py  test__publish.py  test__run_sql_integration.py  test__warehouse.py  test_pandas_utc.py  test_pandas_via_s3_stage.py
tests/functional_tests/metaflow/restore_step_state/: default.yaml  restore_state_test_flow.py  user-test.ipynb
tests/functional_tests/snowflake/: test__utils.py  test__write_audit_publish.py  test__write_audit_publish_.py
tests/unit_tests/metaflow/: test__validate_config.py
tests/unit_tests/shared/: test__utils.py
tests/unit_tests/snowflake/: test__add_comment_to_each_sql_statement.py  test__execute_sql.py  test__get_select_dev_query_tags.py  test__write_audit_publish.py
